# private-calls-pre-commit

./: LICENSE  README.md  pyproject.toml
private_calls/: .pre-commit-hooks.yaml  pyproject.toml
private_calls/private_calls_check/: find_call.py  find_function_def.py  main.py
tests/: test_private_calls_check.py
tests/mock_project/: a.py  b.py
